# dsfun

./: CMakeLists.txt  CMakePresets.json  README.md
dsfun/: CMakeLists.txt  CodeMaid.config  dsfun.cpp  dsfun.h  gamereroute.cpp  gamereroute.h  mainwindow.cpp  mainwindow.h  timedRead.h  timedread.cpp
ui/: mainwindow.ui
